added var estimators to namespace and altered vignette to include examples of var estimators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,11 @@ export(get_c_list_non)
 export(hosvd_full)
 export(min_ef)
 export(pad_circ)
+export(sig_mp)
+export(sig_naive)
+export(sig_soft)
 export(soft_coord)
+export(soft_cv)
 export(stein)
 export(sure)
 export(sure_S)
@@ -32,5 +36,6 @@ export(sure_given_c)
 export(sure_matrix)
 export(sure_matrix_complex)
 export(sure_rank)
+export(tensor_var_est)
 export(update_c)
 export(update_lambda)
