adds SCORE method from Yokota, Lee, and Cichocki 2017

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(get_c_list_non)
 export(hosvd_full)
 export(min_ef)
 export(pad_circ)
+export(score_ylc)
 export(sig_mp)
 export(sig_naive)
 export(sig_soft)
