adds basic matrix-based mdl approach

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(get_c_list)
 export(get_c_list_non)
 export(hosvd_full)
 export(min_ef)
+export(mode_mdl)
 export(pad_circ)
 export(score_ylc)
 export(sig_mp)
