--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(hosvd_full)
 export(min_ef)
 export(mode_mdl)
 export(pad_circ)
+export(par_analysis_wrapper)
 export(score_ylc)
 export(sig_mp)
 export(sig_naive)
