collected matrix-specific estimates of rank into one function: trunc_hosvd

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,6 @@ BugReports: http://github.com/dcgerard/hose/issues
 Suggests: knitr,
     rmarkdown,
     covr,
-    sva
+    sva,
+    cate
 VignetteBuilder: knitr
