--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,9 +22,7 @@ export(get_c_list)
 export(get_c_list_non)
 export(hosvd_full)
 export(min_ef)
-export(mode_mdl)
 export(pad_circ)
-export(par_analysis_wrapper)
 export(score_ylc)
 export(sig_mp)
 export(sig_naive)
@@ -40,6 +38,7 @@ export(sure_matrix)
 export(sure_matrix_complex)
 export(sure_rank)
 export(tensor_var_est)
+export(trunc_hosvd)
 export(update_c)
 export(update_lambda)
 export(update_lambda_brent)
